--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.6", features = ["derive", "cargo"] }
+libafl = "0.12.0"
+libafl_bolts = "0.12.0"
