--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 clap = { version = "4.5.6", features = ["derive", "cargo"] }
 libafl = "0.12.0"
 libafl_bolts = "0.12.0"
+revm = "9.0.0"
