--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,16 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.6", features = ["derive", "cargo"] }
+
 libafl = "0.12.0"
 libafl_bolts = "0.12.0"
+
 revm = { version = "9.0.0", features = ["ethersdb"] }
 revm-primitives = { version = "4.0.0", features = [
     "serde",
-    "memory_limit"
+    "memory_limit",
     ] }
+
 hex = "0.4"
 serde = "1.0.203"
+serde_traitobject = "0.2.8"
