--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,15 @@ revm-primitives = { version = "4.0.0", features = [
     ] }
 
 hex = "0.4"
+
 serde = "1.0.203"
 serde_traitobject = "0.2.8"
+serde_json = "1.0.73"
+
+bytes = { version = "1.2.1", features = ["serde"] }
+
+glob = "0.3.0"
+
+tracing = "0.1"
+
+itertools = "0.10.2"
