--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,6 @@
 name = "evmfuzzy"
 version = "1.0.0"
 edition = "2021"
-build = "src/build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dev-dependencies]
@@ -13,7 +12,13 @@ use_presets = []
 [dependencies]
 clap = { version = "4.4.4", features = ["derive"] }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+
+libafl_bolts = "=0.11.2"
+libafl = "=0.11.2"
+
 serde_json = "1.0.73"
+serde = "1.0.147"
+serde_traitobject = "0.2.8"
 
 revm-primitives = { git = "https://github.com/fuzzland/revm", rev = "1dead51", features = [
     "no_gas_measuring",
@@ -22,6 +27,10 @@ revm-primitives = { git = "https://github.com/fuzzland/revm", rev = "1dead51", f
 ] }
 
 retry = "2.0.0"
+hex = "0.4"
+bytes = { version = "1.2.1", features = ["serde"] }
+typetag = "0.2.13"
+once_cell = "1.8.0"
 
 # error handling
 anyhow = "1.0"
